roles/sirc_baseline/files/iptables
# Generated by iptables-save v1.4.21 
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5:768]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j LOG --log-prefix "Dropped input by firewall: " --log-level 7
-A INPUT -p tcp -m tcp --dport 60 -j DROP
-A OUTPUT -j LOG --log-prefix "Dropped output by firewall: " --log-level 7
-A OUTPUT -p tcp -m tcp --dport 60 -j DROP
-A INPUT -s 10.240.201.49/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.240.201.50/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.240.201.74/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.240.201.100/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.255.77.2/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.255.77.3/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.255.77.4/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.255.77.54/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.255.77.55/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.255.77.66/32 -p tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.240.201.49/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor  va logging" -j ACCEPT
-A OUTPUT -d 10.240.201.50/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.240.201.74/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.240.201.100/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 169.254.169.254/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud metadata va logging" -j ACCEPT
-A OUTPUT -d 10.255.77.2/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.255.77.3/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.255.77.4/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.255.77.54/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.255.77.55/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A OUTPUT -d 10.255.77.66/32 -p tcp -m state --state NEW -m tcp -m comment --comment "Khai bao Cloud monitor va logging" -j ACCEPT
-A INPUT -s 10.61.124.248/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 3389,8000:9990 -j ACCEPT
-A INPUT -s 10.61.124.248/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 20,21,22,23,80,1521,3306 -j ACCEPT
-A INPUT -s 10.61.124.249/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 3389,8000:9990 -j ACCEPT
-A INPUT -s 10.61.124.249/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 20,21,22,23,80,1521,3306 -j ACCEPT
-A INPUT -s 10.61.124.248/32 -p udp -m state --state NEW -m udp -m multiport --dports 3389,8000:9990 -j ACCEPT
-A INPUT -s 10.61.124.248/32 -p udp -m state --state NEW -m udp -m multiport --dports 20,21,22,23,80,1521,3306 -j ACCEPT
-A INPUT -s 10.61.124.248/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 3389,8000:9990 -j ACCEPT
-A INPUT -s 10.61.124.248/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 20,21,22,23,80,1521,3306 -j ACCEPT
-A INPUT -s 10.61.124.249/32 -p udp -m state --state NEW -m udp -m multiport --dports 3389,8000:9990 -j ACCEPT
-A INPUT -s 10.61.124.249/32 -p udp -m state --state NEW -m udp -m multiport --dports 20,21,22,23,80,1521,3306 -j ACCEPT
-A INPUT -s 10.61.124.249/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 3389,8000:9990 -j ACCEPT
-A INPUT -s 10.61.124.249/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 20,21,22,23,80,1521,3306 -j ACCEPT
-A INPUT -s 192.168.46.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 443,80 -j ACCEPT
-A INPUT -s 192.168.47.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 443,80 -j ACCEPT
-A INPUT -s 192.168.45.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 443,80 -j ACCEPT
-A INPUT -s 192.168.86.0/24 -p tcp -m state --state NEW -m tcp -m multiport --dports 443,80 -j ACCEPT
-A INPUT -s 10.255.58.200/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 1433,5432,3000:3006,80,5985,5986 -j ACCEPT
-A INPUT -s 10.255.58.200/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8000:10000,135,445,22,23,1521,3306 -j ACCEPT
-A INPUT -s 10.58.15.114/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 1433,5432,3000:3006,80,5985,5986 -j ACCEPT
-A INPUT -s 10.58.15.114/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8000:10000,135,445,22,23,1521,3306 -j ACCEPT
-A INPUT -s 10.60.101.139/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 1433,5432,3000:3006,80,5985,5986 -j ACCEPT
-A INPUT -s 10.60.101.139/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8000:10000,135,445,22,23,1521,3306 -j ACCEPT
-A INPUT -s 10.60.101.140/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 1433,5432,3000:3006,80,5985,5986 -j ACCEPT
-A INPUT -s 10.60.101.140/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 8000:10000,135,445,22,23,1521,3306 -j ACCEPT
-A INPUT -s 10.58.137.52/32 -p tcp -m state --state NEW -m tcp -m multiport --dports 1433,5432,3000:3006,80,5985,5986 -j ACCEPT
COMMIT
# Completed
